pratique/2017-p2-f3-imperio.out-comp.txt
2017-p2-f3-imperio.cpp: In function ‘void unionSets(int, int)’:
2017-p2-f3-imperio.cpp:16:13: error: reference to ‘rank’ is ambiguous
   16 |         if (rank[root1] > rank[root2]) {
      |             ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2017-p2-f3-imperio.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2017-p2-f3-imperio.cpp:6:21: note:                 ‘std::vector<int> rank’
    6 | vector<int> parent, rank;
      |                     ^~~~
2017-p2-f3-imperio.cpp:16:27: error: reference to ‘rank’ is ambiguous
   16 |         if (rank[root1] > rank[root2]) {
      |                           ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2017-p2-f3-imperio.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2017-p2-f3-imperio.cpp:6:21: note:                 ‘std::vector<int> rank’
    6 | vector<int> parent, rank;
      |                     ^~~~
2017-p2-f3-imperio.cpp:20:17: error: reference to ‘rank’ is ambiguous
   20 |             if (rank[root1] == rank[root2]) rank[root2]++;
      |                 ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2017-p2-f3-imperio.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2017-p2-f3-imperio.cpp:6:21: note:                 ‘std::vector<int> rank’
    6 | vector<int> parent, rank;
      |                     ^~~~
2017-p2-f3-imperio.cpp:20:32: error: reference to ‘rank’ is ambiguous
   20 |             if (rank[root1] == rank[root2]) rank[root2]++;
      |                                ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2017-p2-f3-imperio.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2017-p2-f3-imperio.cpp:6:21: note:                 ‘std::vector<int> rank’
    6 | vector<int> parent, rank;
      |                     ^~~~
2017-p2-f3-imperio.cpp:20:45: error: reference to ‘rank’ is ambiguous
   20 |             if (rank[root1] == rank[root2]) rank[root2]++;
      |                                             ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2017-p2-f3-imperio.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2017-p2-f3-imperio.cpp:6:21: note:                 ‘std::vector<int> rank’
    6 | vector<int> parent, rank;
      |                     ^~~~
2017-p2-f3-imperio.cpp: In function ‘int main()’:
2017-p2-f3-imperio.cpp:30:5: error: reference to ‘rank’ is ambiguous
   30 |     rank.resize(N + 1, 0);
      |     ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2017-p2-f3-imperio.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2017-p2-f3-imperio.cpp:6:21: note:                 ‘std::vector<int> rank’
    6 | vector<int> parent, rank;
      |                     ^~~~
2017-p2-f3-imperio.cpp:40:5: error: ‘memset’ was not declared in this scope
   40 |     memset(count, 0, sizeof(count));
      |     ^~~~~~
2017-p2-f3-imperio.cpp:4:1: note: ‘memset’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    3 | #include <vector>
  +++ |+#include <cstring>
    4 | using namespace std;
